sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/Weekly_FO_Dashboard__c.object-meta.xml
<CustomObject>
    <label>Weekly FO Dashboard</label>
    <nameField>
        <label>Weekly FO Dashboard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weekly FO Dashboard</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>