sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/fields/All_Pending_Cases__c.field-meta.xml
<CustomField>
    <fullName>All_Pending_Cases__c</fullName>
    <label>All Pending Cases</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>