sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/fields/Church_or_Institution_Closed__c.field-meta.xml
<CustomField>
    <fullName>Church_or_Institution_Closed__c</fullName>
    <label>Church or Institution Closed</label>
    <length>16</length>
    <type>Text</type>
</CustomField>