sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/fields/Current_Week_Planned_Collections__c.field-meta.xml
<CustomField>
    <fullName>Current_Week_Planned_Collections__c</fullName>
    <description>Planned collections for the current week</description>
    <inlineHelpText>Planned collections for the current week</inlineHelpText>
    <label>Current Week Planned Collections</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>