sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/fields/Due_Next_7days__c.field-meta.xml
<CustomField>
    <fullName>Due_Next_7days__c</fullName>
    <label>Due Next 7days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>