sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/fields/FLO_Request_Skip_or_Special_Schedule__c.field-meta.xml
<CustomField>
    <fullName>FLO_Request_Skip_or_Special_Schedule__c</fullName>
    <label>FLO Request Skip or Special Schedule</label>
    <length>16</length>
    <type>Text</type>
</CustomField>