sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/fields/FO_Name__c.field-meta.xml
<CustomField>
    <fullName>FO_Name__c</fullName>
    <label>FO Name</label>
    <length>16</length>
    <type>Text</type>
</CustomField>