sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/fields/Franchise_Type__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Type__c</fullName>
    <label>Franchise Type</label>
    <length>16</length>
    <type>Text</type>
</CustomField>