sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/fields/Low_Usage__c.field-meta.xml
<CustomField>
    <fullName>Low_Usage__c</fullName>
    <label>Low Usage or FLT Not used</label>
    <length>16</length>
    <type>Text</type>
</CustomField>