sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/fields/Next_Week_Planned_Collections__c.field-meta.xml
<CustomField>
    <fullName>Next_Week_Planned_Collections__c</fullName>
    <description>Planned collections for the next week</description>
    <label>Next Week Planned Collections</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>