sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/fields/Overdue_Cases__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Cases__c</fullName>
    <label>Overdue Cases</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>