sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/fields/Previous_Week_Planned_Collections__c.field-meta.xml
<CustomField>
    <fullName>Previous_Week_Planned_Collections__c</fullName>
    <description>Planned collections for the previous week</description>
    <inlineHelpText>Planned collections for the previous week</inlineHelpText>
    <label>Previous Week Planned Collections</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>