sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/fields/Priority_Flag__c.field-meta.xml
<CustomField>
    <fullName>Priority_Flag__c</fullName>
    <description>Flag Key to prioritise records and bubble the ones requiring immediate attention to the top</description>
    <inlineHelpText>Flag Key to prioritise records and bubble the ones requiring immediate attention to the top</inlineHelpText>
    <label>Priority Flag</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>