sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/fields/Renewal_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_End_Date__c</fullName>
    <label>Renewal End Date</label>
    <type>Date</type>
</CustomField>