sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/fields/Renewal_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Stage_Name__c</fullName>
    <label>Renewal Stage Name</label>
    <length>16</length>
    <type>Text</type>
</CustomField>