sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/fields/Renewal_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Start_Date__c</fullName>
    <label>Renewal Start Date</label>
    <type>Date</type>
</CustomField>