sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/fields/School_Closed__c.field-meta.xml
<CustomField>
    <fullName>School_Closed__c</fullName>
    <label>School Closed</label>
    <length>16</length>
    <type>Text</type>
</CustomField>