sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/fields/SFO_Name__c.field-meta.xml
<CustomField>
    <fullName>SFO_Name__c</fullName>
    <label>SFO Name</label>
    <length>16</length>
    <type>Text</type>
</CustomField>