sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/fields/Toilet_Locked__c.field-meta.xml
<CustomField>
    <fullName>Toilet_Locked__c</fullName>
    <label>Toilet Locked</label>
    <length>16</length>
    <type>Text</type>
</CustomField>