sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/fields/Toilet_Overflowed__c.field-meta.xml
<CustomField>
    <fullName>Toilet_Overflowed__c</fullName>
    <label>Toilet Overflowed</label>
    <length>16</length>
    <type>Text</type>
</CustomField>