sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/fields/Toilet_Status__c.field-meta.xml
<CustomField>
    <fullName>Toilet_Status__c</fullName>
    <label>Toilet Status</label>
    <length>16</length>
    <type>Text</type>
</CustomField>