sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/fields/Week_Key__c.field-meta.xml
<CustomField>
    <fullName>Week_Key__c</fullName>
    <description>Week Key</description>
    <inlineHelpText>Week Key</inlineHelpText>
    <label>Week_Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>