sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/fields/Workman_Missed_Collection__c.field-meta.xml
<CustomField>
    <fullName>Workman_Missed_Collection__c</fullName>
    <label>Workman Missed Collection</label>
    <length>16</length>
    <type>Text</type>
</CustomField>