sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/recordTypes/FO_Dashboard.recordType-meta.xml
<RecordType>
    <fullName>FO_Dashboard</fullName>
    <active>true</active>
    <label>FO Dashboard</label>
</RecordType>