sfSandBoxCode/force-app/main/default/objects/Weekly_FO_Dashboard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OWNER.ALIAS</columns>
    <columns>NAME</columns>
    <columns>Week_Key__c</columns>
    <columns>SFO_Name__c</columns>
    <columns>FO_Name__c</columns>
    <columns>Toilet_Name__c</columns>
    <columns>Next_Week_Planned_Collections__c</columns>
    <columns>Current_Week_Planned_Collections__c</columns>
    <columns>Previous_Week_Planned_Collections__c</columns>
    <columns>Overdue_Cases__c</columns>
    <columns>Due_Next_7days__c</columns>
    <columns>All_Pending_Cases__c</columns>
    <columns>Renewal_Start_Date__c</columns>
    <columns>Renewal_End_Date__c</columns>
    <columns>Renewal_Signed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>